# input-flow

./: .gitignore  Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: main.rs
crates/input-flow-backend/: Cargo.toml
crates/input-flow-backend/src/: lib.rs  types.rs
crates/input-flow-core/: Cargo.toml
crates/input-flow-core/src/: config.rs  crypto.rs  discovery.rs  lib.rs  pairing.rs  protocol.rs
crates/input-flow-daemon/: Cargo.toml
crates/input-flow-daemon/src/: main.rs
crates/input-flow-x11/: Cargo.toml
crates/input-flow-x11/src/: capture.rs  edge.rs  lib.rs
