[package]
name = "input-flow-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
quinn = { workspace = true }
rustls = { workspace = true }
rcgen = { workspace = true }
serde = { workspace = true }
bincode = { workspace = true }
toml = { workspace = true }
mdns-sd = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Additional dependencies
bytes = "1.5"
rand = "0.8"
hostname = "0.3"
uuid = { version = "1.6", features = ["v4", "serde"] }
dirs = "5.0"
